Add a simple api structure to project

--- a/app/templates/main_handler/index.html
+++ b/app/templates/main_handler/index.html
@@ -1,2 +1,2 @@
-{% extends "../templates/layouts/index.html" %}
+{% extends "../../templates/layouts/index.html" %}
 {% block title %}A bolder title{% end %}
